// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordStrength> should render password strength "Bad" and variant is "danger" 1`] = `
<div>
  <ProgressBar
    animated={false}
    isChild={false}
    label=""
    max={100}
    min={0}
    now={0}
    srOnly={false}
    striped={false}
    variant="danger"
  />
  <small
    className="form-text text-muted"
    id="passwordHelpBlock"
  >
    Tip: This is a top-10 common password
  </small>
</div>
`;

exports[`<PasswordStrength> should render password strength "Good" and variant is "info" 1`] = `
<div>
  <ProgressBar
    animated={false}
    isChild={false}
    label="Good"
    max={100}
    min={0}
    now={60}
    srOnly={false}
    striped={false}
    variant="info"
  />
  <small
    className="form-text text-muted"
    id="passwordHelpBlock"
  />
</div>
`;

exports[`<PasswordStrength> should render password strength "Strong" and variant is "info" 1`] = `
<div>
  <ProgressBar
    animated={false}
    isChild={false}
    label="Strong"
    max={100}
    min={0}
    now={100}
    srOnly={false}
    striped={false}
    variant="info"
  />
  <small
    className="form-text text-muted"
    id="passwordHelpBlock"
  />
</div>
`;

exports[`<PasswordStrength> should render password strength "Weak" and variant is "warning" 1`] = `
<div>
  <ProgressBar
    animated={false}
    isChild={false}
    label="Weak"
    max={100}
    min={0}
    now={40}
    srOnly={false}
    striped={false}
    variant="warning"
  />
  <small
    className="form-text text-muted"
    id="passwordHelpBlock"
  >
    Tip: This is a very common password
  </small>
</div>
`;
